# modelica-genai-lab

./: README.md  pyproject.toml
models/: RC_Step.mo
scripts/: run-all-mos.sh  run-mos.sh
src/modelica_genai_lab/: __init__.py  cli.py  hello.py
src/modelica_genai_lab/omc/: __init__.py  probe.py
tests/: rc_step.mos
