[project]
name = "modelica-genai-lab"
version = "0.1.0"
description = "GenAI-assisted Modelica modeling & simulation lab"
authors = [
  { name = "zero", email = "60701421+0x000-byte@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
modelica-genai = "modelica_genai_lab.cli:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

